[package]
name = "nanovllm_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
candle-core = "0.8"
candle-nn = "0.8"
cudarc = { version = "0.19.8", features = ["nccl", "cuda-version-from-build-system"] }
half = "2"
pyo3 = { version = "0.23", features = ["auto-initialize"] }
numpy = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
tokenizers = "0.20"
indicatif = "0.17"
minijinja = { version = "2", features = ["json"] }
minijinja-contrib = { version = "2", features = ["pycompat"] }

[features]
cuda = ["candle-core/cuda"]

[[bin]]
name = "bench_bridge"
path = "src/bin/bench_bridge.rs"
required-features = ["cuda"]
