[package]
name = "nanovllm_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
candle-core = "0.11"
candle-nn = "0.11"
candle-flash-attn = { version = "0.11", optional = true }
cudarc = { version = "0.19.8", features = ["nccl", "nvrtc", "cuda-version-from-build-system"] }
half = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
tokenizers = "0.20"
indicatif = "0.17"
minijinja = { version = "2", features = ["json"] }
minijinja-contrib = { version = "2", features = ["pycompat"] }

[features]
cuda = ["candle-core/cuda", "dep:candle-flash-attn"]

[[bin]]
name = "repro"
path = "src/bin/repro.rs"
required-features = ["cuda"]
